files/public/css/style.css
/* ... */
/*=== loading-area ===*/
#loading-area {
	width: 100%;
	height: 100%;
	position: fixed;
	background-color: #fff;
	top: 0;
	left: 0;
	z-index: 99999;
	display: none;
}
#loading-area .loader-box #loader-1 {
    -webkit-perspective: 120px;
    -ms-perspective: 120px;
    perspective: 120px;
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 2;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}
#loading-area .loader-box #loader-1:before {
    content: "";
    position: absolute;
    left: 20px;
    top: 20px;
    width: 40px;
    height: 40px;
    background-color: #ff7607;
    -webkit-animation: flip 1s infinite;
    animation: flip 1s infinite;
}
#loading-area .loader-box .loader {
    width: 100px;
    height: 100px;
    position: relative;
}
@keyframes flip {
    0% {
        transform: rotate(0); }
    50% {
        transform: rotateY(180deg); }
    100% {
        transform: rotateY(180deg) rotateX(180deg); }
}

/*===================================
    container
=====================================*/
.container {
    max-width: 1200px;
}

/*===================================
    HEADER AREA
=====================================*/
.header-area .header-top-action {
    background: #f2f0ec;
    line-height: 32px;
    position: relative;
    z-index: 2;
}
.header-area .header-top-action .top-action-content {
    background: #424242;
    position: relative;
    z-index: 1;
}
.header-area .header-top-action .info-action-content {
    background-color: transparent;
}
.header-area .header-top-action .info-action-content:before,
.header-area .header-top-action .info-action-content:after {
    display: none;
}
.header-area .header-top-action .top-action-content:before,
.header-area .header-top-action .top-action-content:after {
    content: '';
    width: 100%;
    height: 100%;
    background: #424242;
    position: absolute;
    top: 0;
    right: 100%;
    z-index: -1;
}
.header-area .header-top-action .top-action-content:after {
    right: -20px;
    -webkit-transform: skew(-12deg,0deg);
    -moz-transform: skew(-12deg,0deg);
    -ms-transform: skew(-12deg,0deg);
    -o-transform: skew(-12deg,0deg);
    transform: skew(-12deg,0deg);
}
.header-area .header-top-action .top-action-content .info-box ul li {
    color: #fff;
    font-size: 13px;
    margin-right: 30px;
}
.header-area .header-top-action .top-action-content .info-box {
    padding-top: 12px;
    padding-bottom: 12px;
}
.header-area .header-top-action .top-action-content .info-box ul li:last-child,
.header-area .header-top-action .top-action-content .info-box ul.top-action-list li:last-child {
    margin-right: 0;
}
.header-area .header-top-action .top-action-content .info-box ul li a {
    color: #fff;
    -webkit-transition: 0.3s ease-in;
    -moz-transition: 0.3s ease-in;
    -ms-transition: 0.3s ease-in;
    -o-transition: 0.3s ease-in;
    transition: 0.3s ease-in;
}
.header-area .header-top-action .top-action-content .info-box ul li a:hover,
.header-area .header-top-action .top-action-content .info-box ul li a i {
    color: #f1ae44;
}
.header-area .header-top-action .top-action-content .info-box ul li a i {
    margin-right: 5px;
    font-size: 12px;
}
.header-area .header-top-action .top-action-content .info-box ul.top-action-list li a {
    color: #818181;
    text-transform: capitalize;
}
.header-area .header-top-action .top-action-content .info-box ul.top-action-list li {
    margin-right: 24px;
}
.header-area .header-top-action .top-action-content .info-box ul.top-action-list li a:hover,
.header-area .header-top-action .top-action-content .info-box ul.top-action-list li a i:hover {
    color: #e36955;
}
.header-area .header-top-action .top-action-content .info-box ul.top-action-list li a i {
    color: #818181;
    font-size: 14px;
}

/*=== header-top ====*/
.header-area .header-top {
    background-color: #fff;
}
.header-area .header-top .ostion-top-wrap {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
}
.header-area .header-top .ostion-top-wrap .ostion-logo {
    height: 120px;
    display: table;
    vertical-align: middle;
}
.header-area .header-top .ostion-top-wrap .ostion-logo a {
    height: 120px;
    display: table-cell;
    vertical-align: middle;
}
.header-area .header-top .ostion-top-wrap .header-btn .theme-btn,
.header-area .header-top .ostion-top-wrap .header-btn .theme-btn:after {
    background-color: #e36955;
}
.header-area .header-top .ostion-top-wrap .header-btn .theme-btn:hover,
.header-area .header-top .ostion-top-wrap .header-btn .theme-btn:hover:after {
    background-color: #f1ae44;
}
.header-area .header-top .ostion-top-wrap .ostion-menu {
    height: 120px;
    position: relative;
}
.header-area .header-top .ostion-top-wrap .ostion-menu .mobile-menu-toggle {
    position: absolute;
    right: 15px;
    top: 0;
    color: #232323;
    font-size: 21px;
    cursor: pointer;
    width: 35px;
    height: 35px;
    background-color: rgba(35, 35, 35, 0.1);
    line-height: 37px;
    text-align: center;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    display: none;
    -webkit-transition: 0.3s ease;
    -moz-transition: 0.3s ease;
    -ms-transition: 0.3s ease;
    -o-transition: 0.3s ease;
    transition: 0.3s ease;
}
.header-area .header-top .ostion-top-wrap .ostion-menu .mobile-menu-toggle:hover {
    background-color: #ff7607;
    color: #fff;
}
/*==== main-navigation =====*/
.header-area .header-top .ostion-top-wrap .ostion-menu .ostion-menu-content {
    position: relative;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: end;
    justify-content: flex-end;
    padding-top: 16px;
    height: 120px;
}
/* ... */

